--- a/build.gradle
+++ b/build.gradle
@@ -71,5 +71,6 @@ project(":core") {
         api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         api "io.github.libktx:ktx-app:1.10.0-b4"
         api "io.github.libktx:ktx-graphics:1.10.0-b4"
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
     }
 }
