--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlinVersion = '1.4.10'
+    ext.kotlinVersion = '1.6.0'
 
     repositories {
         mavenLocal()
@@ -72,5 +72,6 @@ project(":core") {
         api "io.github.libktx:ktx-app:1.10.0-b4"
         api "io.github.libktx:ktx-graphics:1.10.0-b4"
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
+        implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-json-jvm', version: '1.3.2'
     }
 }
