--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 
 }
@@ -59,6 +59,7 @@ project(":desktop") {
 
 project(":core") {
     apply plugin: "kotlin"
+    apply plugin: "org.jetbrains.kotlin.plugin.serialization"
 
     compileKotlin {
         kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
