--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
         gradlePluginPortal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url 'https://jitpack.io' }
     }
 
 
@@ -74,5 +75,8 @@ project(":core") {
         api "io.github.libktx:ktx-graphics:1.10.0-b4"
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
         implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-json-jvm', version: '1.3.2'
+        implementation 'com.github.raeleus:stripe:0.2.1'
+        implementation 'io.github.libktx:ktx-json:1.10.0-rc1'
+        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
     }
 }
