--- a/build.gradle
+++ b/build.gradle
@@ -78,5 +78,6 @@ project(":core") {
         implementation 'com.github.raeleus:stripe:0.2.1'
         implementation 'io.github.libktx:ktx-json:1.10.0-rc1'
         implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+        implementation 'io.github.libktx:ktx-async:1.11.0-rc1'
     }
 }
